<resources>
    <string name="app_name">AppGear</string>
    <string name="dangnhap_tieude">Đăng Nhập Shop Phụ Kiện PC</string>
    <string name="dangnhap">Đăng Nhập</string>
    <string name="Email">Tài Khoản Email</string>
    <string name="Matkhau">Mật Khẩu</string>
    <string name="Matkhau_cu">Mật khẩu cũ</string>
    <string name="Matkhau_moi">Mật khẩu mới</string>
    <string name="Nhaclai_matkhau">Nhắc lại mật khẩu</string>
    <string name="Mucdangky">Đăng ký tài khoản mới</string>
    <string name="Quen_matkhau">Quên Mật Khẩu</string>
    <string name="Btn_sendmail">Xác Nhận</string>
    <string name="Truong_korong">Không được bỏ trống !</string>
    <string name="Dangky_tieude">Đăng Ký Tài Khoản</string>
    <string name="Dangky">Đăng Ký</string>
    <string name="Quaylai_dangnhap">Trờ lại màn hình đăng nhập</string>
    <string name="Quenmk_tieude">Nhập Gmail đã đăng ký</string>
    <string name="Laylai_matkhau">Lấy lại mật khẩu</string>
    <string name="title_activity_main_products">Danh sách sản phẩm</string>
    <string name="navigation_drawer_open">Mở Menu</string>
    <string name="navigation_drawer_close">Đóng Menu</string>
    <string name="nav_header_title">Gear App</string>
    <string name="nav_header_subtitle">Sản phẩm phụ kiện cho pc</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cài đặt</string>
    
    <string name="infor_user">Thông tin cá nhân</string>
    <string name="name_user">Họ Tên</string>
    <string name="birth_day">Ngày sinh</string>
    <string name="phone">Số điện thoại</string>
    <string name="change_pass">Đổi Mật Khẩu</string>
</resources>
